# bizhandle

./: .gitignore  MONIDESK_FULL_EXECUTION_BACKLOG.md  package-lock.json  package.json  render-backend.yaml  render.dev.yaml  render.yaml
ibos-backend/: .env  .env.example  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
ibos-backend/alembic/: env.py
ibos-backend/alembic/versions/: 20260213_0001_add_ai_insight_logs.py  20260213_0002_add_google_sub_to_users.py  20260215_0003_hardening_and_core_business_features.py  20260221_0004_add_business_memberships.py  20260221_0005_add_audit_logs_table.py  20260221_0006_add_orders_tables.py  20260221_0007_add_business_pending_order_timeout.py  20260221_0008_add_invoices_tables.py  20260222_0009_add_customers_tables.py  20260222_0010_add_storefront_baseline.py  20260222_0011_add_storefront_domain_and_seo_controls.py  20260222_0012_add_checkout_sessions_tables.py  20260222_0013_add_checkout_webhook_events.py  20260222_0014_add_shipping_locations_integrations.py  20260223_0015_add_campaigns_tables.py  20260223_0016_add_advanced_receivables_tables.py  20260223_0017_add_analytics_pos_and_compliance_tables.py  20260223_0018_add_ai_copilot_tables.py  20260224_0019_add_ai_risk_alerts_and_governance_traces.py  (+8 more)
ibos-backend/app/: main.py
ibos-backend/tests/: conftest.py  test_ai_provider_fallbacks.py  test_auth_dashboard.py  test_backlog_workflows.py  test_fixes_scope.py  test_openapi_contract.py  test_pos_slo.py  test_postgres_integration.py  test_response_enrichment.py
(+199 files in other folders)
